--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap.scss";
+$fa-font-path: '../node_modules/font-awesome/fonts';
+
 @import '~font-awesome/scss/font-awesome';
 
