--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-
+<app-header></app-header>
 <div class="container" style="margin-top: 10px;">
   <router-outlet></router-outlet>
 </div>
